# nodeloom-sdk-python

./: .gitignore  README.md  pyproject.toml  snyk-findings.json
.github/workflows/: ci.yml  publish.yml
examples/: simple_agent.py
src/nodeloom/: __init__.py  api.py  batch_processor.py  client.py  config.py  control.py  control_poller.py  queue.py  span.py  trace.py  transport.py  types.py
src/nodeloom/integrations/: __init__.py  anthropic.py  crewai.py  langchain.py
tests/: test_anthropic.py  test_api.py  test_batch_processor.py  test_client.py  test_control.py  test_langchain.py  test_trace.py
